--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,4 @@
 
 // Body
-$body-bg: #333;
+$enable-rounded: true;
 
-// Typography
-$font-family-sans-serif: "Raleway", sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
