--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
@@ -6,11 +5,14 @@
 @import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+main {
+    .container {
+        min-height: 500px;
+    }
 }
+// @import "cover";
 
-@import "cover";
+@import "header";
+@import "index";
