--- a/src/index.ejs
+++ b/src/index.ejs
@@ -35,6 +35,19 @@
                             <span>abc</span> Test font</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="mt-3 mb-5">
+                            <form action="javascript:void(0);" class="form-inline">
+                                <label class="mr-sm-2 mb-0" for="first_name">First Name</label>
+                                <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
+                                <label class="mr-sm-2 mb-0" for="last_name">Last Name</label>
+                                <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="last_name" name="last_name">
+                                <button type="submit" class="btn btn-default mt-2 mt-sm-0">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </main>
