out put path set to ip

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,3 +5,5 @@ $enable-rounded: true;
 $blue: #dc2d1a;
 
 $input-focus-bg: #dcad1a;
+
+$input-transition: border-color ease-in-out 1s, box-shadow ease-in-out 1s;
