--- a/src/include/header.ejs
+++ b/src/include/header.ejs
@@ -13,7 +13,7 @@
         <a class="btn btn-outline-primary" href="#">Sign up</a>
     </div> -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img class="mb-2 lms-header-logo" src="img/logistic-logo.svg" alt="" width="150">
         </a>
 
@@ -23,17 +23,20 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="about-us.html">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="contact-us.html">Contact us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="datatable-demo.html">Datatables</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
@@ -45,9 +48,6 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-md-0">
-                <input class="form-control" type="text" placeholder="Search">
-            </form>
         </div>
     </nav>
 </header>
