updated for vendor js css

--- a/src/datatable-demo.ejs
+++ b/src/datatable-demo.ejs
@@ -10,7 +10,7 @@
 
     <title>Bootstrap - Button Demo</title>
 
-
+    <% include /src/include/styles.ejs %>
 </head>
 
 <body>
@@ -508,6 +508,7 @@
 
     <% include /src/include/footer.ejs %>
 
+    <% include /src/include/scripts.ejs %>
 </body>
 <script>
     $(document).ready(function() {
