--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,6 +10,7 @@
 
     <title>Bootstrap - Button Demo</title>
 
+    <% include /src/include/styles.ejs %>
 
 </head>
 
@@ -19,7 +20,7 @@
 
     <main id="lms-page-index">
         <div class="container">
-            <div class="row">
+            <div class="row bounce animated infinite">
                 <div class="col">
                     <button type="button" class="btn btn-primary">Primary</button>
                     <button type="button" class="btn btn-secondary">Secondary</button>
@@ -54,6 +55,7 @@
 
     <% include /src/include/footer.ejs %>
 
+    <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
