--- a/src/contact-us.ejs
+++ b/src/contact-us.ejs
@@ -10,7 +10,7 @@
 
     <title>Bootstrap - Button Demo</title>
 
-
+    <% include /src/include/styles.ejs %>
 </head>
 
 <body>
@@ -54,6 +54,7 @@
 
     <% include /src/include/footer.ejs %>
 
+    <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
