updated few things

--- a/src/datatable-demo.ejs
+++ b/src/datatable-demo.ejs
@@ -9,6 +9,15 @@
     <link rel="icon" href="img/favicon.ico">
 
     <title>Bootstrap - Button Demo</title>
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.css"/>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.js"></script> -->
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
+
+
+
+
 
     <% include /src/include/styles.ejs %>
 </head>
@@ -509,6 +518,7 @@
     <% include /src/include/footer.ejs %>
 
     <% include /src/include/scripts.ejs %>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 </body>
 <script>
     $(document).ready(function() {
