--- a/src/include/header.ejs
+++ b/src/include/header.ejs
@@ -38,6 +38,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="datatable-demo.html">Datatables</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="font-awesome.html">Font Awesome icon</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Dropdown</a>
