--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
 
     <main id="lms-page-index">
         <div class="container">
-            <div class="row bounce animated infinite">
+            <div class="row animated fadeInRight">
                 <div class="col">
                     <button type="button" class="btn btn-primary">Primary</button>
                     <button type="button" class="btn btn-secondary">Secondary</button>
@@ -32,8 +32,7 @@
                     <button type="button" class="btn btn-dark">Dark</button>
 
                     <button type="button" class="btn btn-link">Link</button>
-                    <p>
-                        <span>abc</span> Test font</p>
+                    <p>It has font size different for responsive</p>
                 </div>
             </div>
             <div class="row">
