--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,9 @@
 
 // Body
-$enable-rounded: true;
+$enable-rounded: false;
 
-$blue: #dc2d1a;
+// $blue: #dc2d1a;
 
-$input-focus-bg: #dcad1a;
+// $input-focus-bg: #dcad1a;
 
-$input-transition: border-color ease-in-out 1s, box-shadow ease-in-out 1s;
+// $input-transition: border-color ease-in-out 1s, box-shadow ease-in-out 1s;
