--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,8 +18,8 @@
             font-size: 18px;
         }
 
-        span {
-            background-color: $primary;
-        }
+        // span {
+        //     background-color: $primary;
+        // }
     }
 }
