--- a/src/contact-us.ejs
+++ b/src/contact-us.ejs
@@ -17,44 +17,48 @@
 
     <% include /src/include/header.ejs %>
 
-    <main id="lms-page-index">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <button type="button" class="btn btn-primary">Primary</button>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                    <button type="button" class="btn btn-warning">Warning</button>
-                    <button type="button" class="btn btn-info">Info</button>
-                    <button type="button" class="btn btn-light">Light</button>
-                    <button type="button" class="btn btn-dark">Dark</button>
+        <main id="lms-page-index">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="p-5"> Contact Us</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.9752071390167!2d70.79719731545221!3d22.278928985334744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca0dc6a68d63%3A0x38cd51d12cf3ca2e!2sLogistic+Infotech+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1528803659318" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="contact-form">
+                                    <form action="">
+                                            <div class="form-group">
+                                                    <label for="pwd">Full Name</label>
+                                                    <input type="password" class="form-control" id="pwd">
+                                                  </div>
+                                        <div class="form-group">
+                                          <label for="email">Email </label>
+                                          <input type="email" class="form-control" id="email">
+                                        </div>
 
-                    <button type="button" class="btn btn-link">Link</button>
-                    <p>
-                        <span>abc</span> Test font</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="mt-3 mb-5">
-                        <form action="javascript:void(0);" class="form-inline">
-                            <label class="mr-sm-2 mb-0" for="first_name">First Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
-                            <label class="mr-sm-2 mb-0" for="last_name">Last Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="last_name" name="last_name">
-                            <button type="submit" class="btn btn-default mt-2 mt-sm-0">Submit</button>
-                        </form>
+                                        <div class="form-group">
+                                                <label for="comment">Comment:</label>
+                                                <textarea class="form-control" rows="5" id="comment"></textarea>
+                                              </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                      </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
+        </main>
 
-        </div>
-    </main>
+        <% include /src/include/footer.ejs %>
 
-    <% include /src/include/footer.ejs %>
-
-    <% include /src/include/scripts.ejs %>
+        <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
