animation demo done

--- a/src/datatable-demo.ejs
+++ b/src/datatable-demo.ejs
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.js"></script> -->
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/> -->
 
 
 
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <table id="example" class="display" style="width:100%">
+                    <table id="example" class="display" style="width:100%" class="P-5">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -518,7 +518,7 @@
     <% include /src/include/footer.ejs %>
 
     <% include /src/include/scripts.ejs %>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script> -->
 </body>
 <script>
     $(document).ready(function() {
