--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -23,3 +23,20 @@
         // }
     }
 }
+
+
+
+
+.animated-box{
+    width: 100%;
+    padding: 50px  30px;
+    margin: 0px 0px 40px 0px;
+    -moz-box-shadow:    3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    box-shadow:         3px 3px 5px 6px #ccc;
+}
+
+.sweetalert{
+    width: 100%;
+
+}
