--- a/src/contact-us.ejs
+++ b/src/contact-us.ejs
@@ -28,27 +28,28 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="map">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.9752071390167!2d70.79719731545221!3d22.278928985334744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca0dc6a68d63%3A0x38cd51d12cf3ca2e!2sLogistic+Infotech+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1528803659318" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.9752071390167!2d70.79719731545221!3d22.278928985334744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca0dc6a68d63%3A0x38cd51d12cf3ca2e!2sLogistic+Infotech+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1528803659318"
+                                    width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="contact-form">
-                                    <form action="">
-                                            <div class="form-group">
-                                                    <label for="pwd">Full Name</label>
-                                                    <input type="password" class="form-control" id="pwd">
-                                                  </div>
-                                        <div class="form-group">
-                                          <label for="email">Email </label>
-                                          <input type="email" class="form-control" id="email">
-                                        </div>
+                                <form action="">
+                                    <div class="form-group">
+                                        <label for="pwd">Full Name</label>
+                                        <input type="password" class="form-control" id="pwd">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">Email </label>
+                                        <input type="email" class="form-control" id="email">
+                                    </div>
 
-                                        <div class="form-group">
-                                                <label for="comment">Comment:</label>
-                                                <textarea class="form-control" rows="5" id="comment"></textarea>
-                                              </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                      </form>
+                                    <div class="form-group">
+                                        <label for="comment">Comment:</label>
+                                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -58,7 +59,7 @@
 
         <% include /src/include/footer.ejs %>
 
-        <% include /src/include/scripts.ejs %>
+            <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
