--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,34 +21,60 @@
     <main id="lms-page-index">
         <div class="container">
             <div class="row animated fadeInRight">
-                <div class="col">
-                    <button type="button" class="btn btn-primary">Primary</button>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                    <button type="button" class="btn btn-warning">Warning</button>
-                    <button type="button" class="btn btn-info">Info</button>
-                    <button type="button" class="btn btn-light">Light</button>
-                    <button type="button" class="btn btn-dark">Dark</button>
-
-                    <button type="button" class="btn btn-link">Link</button>
-                    <p>It has font size different for responsive</p>
+                <div class="col-md-12">
+                    <h3 class="p-5">Animated Css Exmaple</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="mt-3 mb-5">
-                        <form action="javascript:void(0);" class="form-inline">
-                            <label class="mr-sm-2 mb-0" for="first_name">First Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
-                            <label class="mr-sm-2 mb-0" for="last_name">Last Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="last_name" name="last_name">
-                            <button type="submit" class="btn btn-default mt-2 mt-sm-0">Submit</button>
-                        </form>
+                <div class="col-md-4">
+                    <div class="animated-box animated bounce">
+                        <h4>bounce</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animated-box animated bounceInLeft">
+                        <h4>animated bounceInLeft</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animated-box animated flash">
+                        <h4>flash</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animated-box animated rubberBand">
+                        <h4>flash</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animated-box animated swing">
+                        <h4>swing</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animated-box animated tada">
+                        <h4>tada</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
                     </div>
                 </div>
             </div>
-
+            <div class="row animated fadeInRight">
+                <div class="col-md-12">
+                    <h3 class="p-5">Sweet Alert Exmaple</h3>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="sweetalert">
+                            <button class="swal"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
