about pages done
font-awesome icon size and loader done

datatable scss done

blog runing

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,69 +18,86 @@
 
     <% include /src/include/header.ejs %>
 
-    <main id="lms-page-index">
-        <div class="container">
-            <div class="row animated fadeInRight">
-                <div class="col-md-12">
-                    <h3 class="p-5">Animated Css Exmaple</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="animated-box animated bounce">
-                        <h4>bounce</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
+        <main id="lms-page-index">
+            <div class="container">
+                <div class="row animated fadeInRight">
+                    <div class="col-md-12">
+                        <div class="hd-title">
+                            <h3> Animated Css Exmaple</h3>
+                        </div>
+
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="animated-box animated bounceInLeft">
-                        <h4>animated bounceInLeft</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="animated-box animated flash">
-                        <h4>flash</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="animated-box animated rubberBand">
-                        <h4>flash</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="animated-box animated swing">
-                        <h4>swing</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="animated-box animated tada">
-                        <h4>tada</h4>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue. Donec non vulputate elit. Nulla ac pretium neque.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row animated fadeInRight">
-                <div class="col-md-12">
-                    <h3 class="p-5">Sweet Alert Exmaple</h3>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="sweetalert">
-                            <button class="swal"></button>
+                        <div class="animated-box animated bounce">
+                            <h4>bounce</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="animated-box animated bounceInLeft">
+                            <h4>animated bounceInLeft</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="animated-box animated flash">
+                            <h4>flash</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="animated-box animated rubberBand">
+                            <h4>flash</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="animated-box animated swing">
+                            <h4>swing</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="animated-box animated tada">
+                            <h4>tada</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales sem diam, id consequat
+                                lectus eleifend quis. Etiam in risus efficitur, vestibulum velit sit amet, finibus augue.
+                                Donec non vulputate elit. Nulla ac pretium neque.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row animated fadeInRight">
+                    <div class="col-md-12">
+                        <div class="hd-title">
+                            <h3>Sweet Alert Exmaple</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="sweetalert">
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <% include /src/include/footer.ejs %>
+        <% include /src/include/footer.ejs %>
 
-    <% include /src/include/scripts.ejs %>
+       <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
