--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -19,4 +19,7 @@ main {
 
 @import "header";
 @import "index";
+@import "font-awesome";
+@import "about";
+@import "datatable";
 @import "contact-us";
