--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -25,7 +25,14 @@
 }
 
 
-
+.hd-title{
+    width: 100%;
+    h3{
+        width: 100%;
+        font-size: 35px;
+        padding: 25px 0px;
+    }
+}
 
 .animated-box{
     width: 100%;
