--- a/src/about-us.ejs
+++ b/src/about-us.ejs
@@ -17,44 +17,46 @@
 
     <% include /src/include/header.ejs %>
 
-    <main id="lms-page-index">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <button type="button" class="btn btn-primary">Primary</button>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                    <button type="button" class="btn btn-warning">Warning</button>
-                    <button type="button" class="btn btn-info">Info</button>
-                    <button type="button" class="btn btn-light">Light</button>
-                    <button type="button" class="btn btn-dark">Dark</button>
-
-                    <button type="button" class="btn btn-link">Link</button>
-                    <p>
-                        <span>abc</span> Test font</p>
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="hd-title">
+                            <h3> About Us</h3>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="mt-3 mb-5">
-                        <form action="javascript:void(0);" class="form-inline">
-                            <label class="mr-sm-2 mb-0" for="first_name">First Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
-                            <label class="mr-sm-2 mb-0" for="last_name">Last Name</label>
-                            <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="last_name" name="last_name">
-                            <button type="submit" class="btn btn-default mt-2 mt-sm-0">Submit</button>
-                        </form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="about-bg">
+                            <img src="img/pexels-photo-208745.jpeg">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="about-info">
+                            <h4> Lorem ipsum dolor sit amet</h4>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie purus ut enim hendrerit
+                                tincidunt. Morbi ac orci neque. Phasellus id turpis feugiat sapien vulputate tincidunt nec
+                                et tellus.</p>
+                            <p>
+                                Morbi mattis lectus risus, at porta neque feugiat ac. Sed sollicitudin scelerisque egestas. Maecenas ac eleifend purus. Praesent
+                                auctor placerat erat, ac facilisis ex vehicula sed. Pellentesque feugiat lorem pellentesque
+                                tincidunt tempor. .
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie purus ut enim hendrerit tincidunt. Morbi ac orci
+                                neque. Phasellus id turpis feugiat sapien vulputate tincidunt nec et tellus.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-        </div>
-    </main>
+        </main>
 
-    <% include /src/include/footer.ejs %>
+        <% include /src/include/footer.ejs %>
 
-    <% include /src/include/scripts.ejs %>
+            <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
