--- a/src/sass/contact-us.scss
+++ b/src/sass/contact-us.scss
@@ -6,3 +6,22 @@
 .contact-form{
     width: 100%;
 }
+
+form label {
+  display: inline-block;
+  width: 100px;
+}
+
+form div {
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  margin-left: 5px;
+}
+
+label.error {
+  display: inline;
+}
+
