All pages title done
datatable  deign done

--- a/src/datatable-demo.ejs
+++ b/src/datatable-demo.ejs
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.ico">
 
-    <title>Bootstrap - Button Demo</title>
+    <title>Datatable </title>
     <% include /src/include/styles.ejs %>
 </head>
 
@@ -19,7 +19,6 @@
     <main id="lms-page-index">
         <div class="container">
             <div class="row">
-
                         <div class="col">
                                 <div class=" table-pd">
                                 <table id="example" class="display" style="width:100%" class="P-5">
