--- a/src/font-awesome.ejs
+++ b/src/font-awesome.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.ico">
-    <title>Bootstrap - Button Demo</title>
+    <title>Font-awesome</title>
     <% include /src/include/styles.ejs %>
 
 </head>
