--- a/src/sass/datatable.scss
+++ b/src/sass/datatable.scss
@@ -6,4 +6,20 @@
     outline-offset: -2px;
     -webkit-appearance: none !important;
     border: 1px solid gray;
+    border-radius: 5px;
+    text-indent: 10px;
+}
+table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
+    background-color: #c8c8c8;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
+    border-radius: 50px;border: 1px solid #000;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button{border-radius: 50px;}
+table.dataTable thead th, table.dataTable thead td {
+    padding: 10px 18px;
+    border-bottom: 2px solid #111;
+}
+table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
+    background-color: #e0e0e0;
 }
