webpack images copy directory added, updated bootstrap version, fonts added locally

--- a/src/about-us.ejs
+++ b/src/about-us.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 
     <title>Bootstrap - Button Demo</title>
 
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="about-bg">
-                            <img src="img/pexels-photo-208745.jpeg">
+                            <img src="images/pexels-photo-208745.jpeg">
                         </div>
                     </div>
                     <div class="col-md-6">
