--- a/src/include/footer.ejs
+++ b/src/include/footer.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md">
-                <img class="mb-2" src="img/logistic-logo.svg" alt="" width="150">
+                <img class="mb-2" src="images/logistic-logo.svg" alt="" width="150">
                 <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
             </div>
             <div class="col-6 col-md">
