--- a/src/include/styles.ejs
+++ b/src/include/styles.ejs
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="css/vendor.css">
 <link rel="stylesheet" href="css/app.css">
+<link rel="stylesheet" href="fonts/style.css">
