--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+// @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
 // Variables
 @import "variables";
@@ -7,14 +7,6 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-
-
-main {
-    .container {
-        min-height: 500px;
-
-    }
-}
 // @import "cover";
 
 @import "header";
@@ -24,10 +16,15 @@ main {
 @import "datatable";
 @import "contact-us";
 
+main {
+    .container {
+        min-height: 500px;
+    }
+}
 
-
-
-
-
-
-
+body {
+    font-family: 'Raleway';
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale;
+}
