--- a/src/font-awesome.ejs
+++ b/src/font-awesome.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>Font-awesome</title>
     <% include /src/include/styles.ejs %>
 
