--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,6 +4,12 @@ $enable-rounded: false;
 // $info:red;
 // $blue: #dc2d1a;
 
+$primary: #dc2d1a;
+$info:  #dcad1a;
+
+$border-radius: 0px;
+$btn-border-radius: 30px;
+// $btn-font-size: 25px;
 // $input-focus-bg: #dcad1a;
 
 // $input-transition: border-color ease-in-out 1s, box-shadow ease-in-out 1s;
