--- a/src/datatable-demo.ejs
+++ b/src/datatable-demo.ejs
@@ -9,12 +9,12 @@
     <link rel="icon" href="images/favicon.ico">
 
     <title>Datatable </title>
-    <% include /src/include/styles.ejs %>
+    <% include ./include/styles.ejs %>
 </head>
 
 <body>
 
-    <% include /src/include/header.ejs %>
+    <% include ./include/header.ejs %>
 
     <main id="lms-page-index">
         <div class="container">
@@ -507,9 +507,9 @@
         </div>
     </main>
 
-    <% include /src/include/footer.ejs %>
+    <% include ./include/footer.ejs %>
 
-    <% include /src/include/scripts.ejs %>
+    <% include ./include/scripts.ejs %>
 </body>
 <script>
     $(document).ready(function() {
