--- a/src/font-awesome.ejs
+++ b/src/font-awesome.ejs
@@ -7,13 +7,13 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
     <title>Font-awesome</title>
-    <% include /src/include/styles.ejs %>
+    <% include ./include/styles.ejs %>
 
 </head>
 
 <body>
 
-    <% include /src/include/header.ejs %>
+    <% include ./include/header.ejs %>
 
         <main id="lms-page-index">
             <div class="container">
@@ -97,9 +97,9 @@
                 </div>
             </div>
         </main>
-        <% include /src/include/footer.ejs %>
+        <% include ./include/footer.ejs %>
 
-            <% include /src/include/scripts.ejs %>
+            <% include ./include/scripts.ejs %>
 </body>
 
 </html>
