ejs vesrions locked to         "ejs": "^2.6.1",         "ejs-compiled-loader": "^1.1.0", Since partial file not compiling dynemically with latest version

--- a/src/about-us.ejs
+++ b/src/about-us.ejs
@@ -10,12 +10,12 @@
 
     <title>Bootstrap - Button Demo</title>
 
-    <% include ./include/styles.ejs %>
+    <% include /src/include/styles.ejs %>
 </head>
 
 <body>
 
-    <% include ./include/header.ejs %>
+    <% include /src/include/header.ejs %>
 
         <main>
             <div class="container">
@@ -54,9 +54,9 @@
 
         </main>
 
-        <% include ./include/footer.ejs %>
+        <% include /src/include/footer.ejs %>
 
-            <% include ./include/scripts.ejs %>
+            <% include /src/include/scripts.ejs %>
 </body>
 
 </html>
