--- a/src/contact-us.ejs
+++ b/src/contact-us.ejs
@@ -10,12 +10,12 @@
 
     <title>Bootstrap - Button Demo</title>
 
-    <% include ./include/styles.ejs %>
+    <% include /src/include/styles.ejs %>
 </head>
 
 <body>
 
-    <% include ./include/header.ejs %>
+    <% include /src/include/header.ejs %>
 
         <main id="lms-page-index">
             <section>
@@ -58,9 +58,9 @@
             </section>
         </main>
 
-        <% include ./include/footer.ejs %>
+        <% include /src/include/footer.ejs %>
 
-        <% include ./include/scripts.ejs %>
+        <% include /src/include/scripts.ejs %>
         <script>
         $(document).ready(function() {
 
