--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,13 +10,13 @@
 
     <title>Bootstrap - Button Demo</title>
 
-    <% include ./include/styles.ejs %>
+    <% include /src/include/styles.ejs %>
 
 </head>
 
 <body>
 
-    <% include ./include/header.ejs %>
+    <% include /src/include/header.ejs %>
 
         <main id="lms-page-index">
             <p>Test color on p tag</p>
@@ -111,9 +111,9 @@
             </div>
         </main>
 
-        <% include ./include/footer.ejs %>
+        <% include /src/include/footer.ejs %>
 
-            <% include ./include/scripts.ejs %>
+            <% include /src/include/scripts.ejs %>
                 <script>
 
                     $('button.hello').click(function (e) {
